bug-fix/ETSL-637 fixed table alignment issues

--- a/ui.frontend/src/main/webpack/etisalat/styles/table.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/table.scss
@@ -337,7 +337,11 @@
       thead,
       tbody {
         tr {
-          th,
+          th {
+            @include respond-to-min($desktop) {
+              width: 33.33%;
+            }
+          }
           td {
             @include respond-to-min($desktop) {
               width: 33.33%;
