--- a/ui.frontend/src/main/webpack/etisalat/styles/table_filter.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/table_filter.scss
@@ -653,7 +653,6 @@
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
   background-color: $white;
   padding: 4px 16px;
-  margin-bottom: 16px;
   @include respond-to-min($desktop) {
     padding: 14px 12px;
   }
@@ -952,6 +951,10 @@
         }
       }
     }
+  }
+  &.search-wrapper {
+    margin-bottom: 2px;
+    box-shadow: none;
   }
 }
 
